# exif-maker-notes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/exif_maker_notes/: __init__.py  tool.py
src/exif_maker_notes/cli/: __init__.py  config.py  logger.py
src/exif_maker_notes/fixes/: __init__.py  exposure.py  fix.py  hardware.py  timezone.py
tests/: test_config.py  test_fix.py  test_main.py
tests/data/: exposure.csv
