[project]
name = "exif-maker-notes"
version = "0.1.0"
description = "An (opinionated) tool to read EXIF Maker Notes and propagate them to standard EXIF tags."
authors = [{ name = "Tadej Novak", email = "tadej@tano.si" }]
requires-python = ">= 3.11"
readme = "README.md"
license = { text = "MPL-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
exifmn = "exif_maker_notes:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
